--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>js-lib</groupId>
+	<groupId>com.js-lib</groupId>
 	<artifactId>js-velocity</artifactId>
 	<version>1.0.0</version>
 
@@ -60,12 +60,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>js-lib</groupId>
+			<groupId>com.js-lib</groupId>
 			<artifactId>js-commons</artifactId>
-			<version>1.1.1</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>js-lib</groupId>
+			<groupId>com.js-lib</groupId>
 			<artifactId>js-template-api</artifactId>
 			<version>1.0</version>
 		</dependency>
