--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.10.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -72,9 +72,7 @@
 						</goals>
 						<configuration>
 							<show>private</show>
-							<additionalOptions>
-								<additionalOption>-Xdoclint:none</additionalOption>
-							</additionalOptions>
+							<doclint>none</doclint>
 						</configuration>
 					</execution>
 				</executions>
